--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
-#app {
+html, body, #app {
+    margin: 0;
+    height: 100%;
+}
 
+#app {
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 .box {
