--- a/examples/twitter-home/styles.css
+++ b/examples/twitter-home/styles.css
@@ -10,3 +10,75 @@ body {
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
 }
+
+input, button {
+    outline: 0;
+}
+
+header#main-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 46px;
+    background: #FFF;
+    padding: 0 15px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+}
+
+header#main-header img {
+    max-width: 21px;
+}
+
+header#main-header nav ul {
+    display: flex;
+    list-style: none;
+}
+
+header#main-header nav ul li {
+    display: flex;
+    align-items: center;
+
+    font-size:  13px;
+    color: #667580;
+    font-weight: bold;
+
+    margin-right: 30px;
+}
+
+header#main-header nav ul li:last-child {
+    margin-right: 0;
+}
+
+#main-header nav ul li img {
+    margin-right: 4px;
+}
+
+header#main-header div.side {
+    display: flex;
+}
+
+header#main-header div.side img{
+    border-radius: 50%;
+    margin: 0 15px;
+}
+
+header#main-header div.side button {
+    background-color: #3bb9e3;
+    font-weight: bold;
+    color: #FFF;
+    width: 90px;
+    font-size: 14px;
+    border-radius: 16px;
+    border: 0;
+}
+
+header#main-header div.side input {
+    border-radius: 16px;
+    border: 1px solid #e6ecf0;
+    padding:  0 30px 0 12px;
+    font-size: 12px;
+    width: 220px;
+    background: #f5f8fa url("/examples/twitter-home/images/search.png") no-repeat 190px center;
+}
+
