--- a/examples/twitter-home/styles.css
+++ b/examples/twitter-home/styles.css
@@ -24,6 +24,8 @@ header#main-header{
     background: #FFF;
     padding: 0 15px;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+    position: relative;
+    z-index: 1;
 }
 
 header#main-header img {
@@ -80,5 +82,19 @@ header#main-header div.side input {
     font-size: 12px;
     width: 220px;
     background: #f5f8fa url("/examples/twitter-home/images/search.png") no-repeat 190px center;
+}
+
+div.banner {
+    height: 380px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #3bb9e3;
+}
+
+div.banner h1 {
+    font-weight: 50;
+    color: #eee;
 }
 
