--- a/examples/twitter-home/styles.css
+++ b/examples/twitter-home/styles.css
@@ -16,16 +16,20 @@ input, button {
 }
 
 header#main-header{
+    height: 46px;
+    background: #FFF;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+    position: relative;
+    z-index: 1;
+}
+
+header#main-header .content{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    height: 46px;
-    background: #FFF;
+    height: 100%;
     padding: 0 15px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-    position: relative;
-    z-index: 1;
 }
 
 header#main-header img {
@@ -97,4 +101,89 @@ div.banner h1 {
     font-weight: 50;
     color: #eee;
 }
+
+.content {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
+
+div.data-bar {
+    height: 59px;
+    background:  #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+}
+
+div.data-bar .content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 285px;
+    height: 100%;
+}
+
+div.data-bar .content ul {
+    display: flex;
+    list-style: none;
+    height: 100%;
+}
+
+div.data-bar .content ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 15px;
+    position: relative;
+}
+
+div.data-bar .content ul li.active::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: #3bb9e3;
+    
+}
+
+div.data-bar .content ul li span {
+    color: #667580;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+div.data-bar .content ul li strong {
+    color: #667580;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 2px;
+}
+
+div.data-bar .content ul li.active strong {
+    color: #3bb9e3;
+}
+
+div.data-bar .content .left-actions {
+    display: flex;
+}
+
+div.data-bar .content .left-actions button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: 1px solid #3bb9e3;
+    background-color: #FFF;
+    color: #3bb9e3;
+    border-radius: 16px;
+    width: 70px;
+    font-weight: bold;
+    height: 30px;
+    font-size: 14px;
+
+    margin-right: 15px;
+}
+
 
