--- a/examples/twitter-home/styles.css
+++ b/examples/twitter-home/styles.css
@@ -186,4 +186,115 @@ div.data-bar .content .left-actions button {
     margin-right: 15px;
 }
 
+div.wrapper-content {
+    display: flex;
+}
 
+div.wrapper-content  aside.profile {
+    width: 260px;
+}
+
+div.wrapper-content  aside.profile img.avatar {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    margin-top: -130px;
+}
+
+div.wrapper-content  aside.profile h1 {
+    font-size: 21px;
+    color: #1F2226;
+    margin-top: 10px;
+}
+
+div.wrapper-content  aside.profile span {
+    font-size: 14px;
+    color: #53626C;
+}
+
+div.wrapper-content  aside.profile p {
+    font-size: 14px;
+    color: #1F2226;
+    margin-top: 15px;
+}
+
+div.wrapper-content  aside.profile ul.user-info {
+    margin-top: 20px;
+    list-style: none;
+}
+
+div.wrapper-content  aside.profile ul.user-info li {
+    font-size: 14px;
+    color: #657786;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 5px;
+}
+
+div.wrapper-content  aside.profile ul.user-info li:first-child {
+    margin:0
+}
+
+div.wrapper-content  aside.profile ul.user-info li img {
+    margin-right: 5px;
+}
+
+div.wrapper-content  aside.profile .widget {
+    margin-top: 20px;
+}
+
+div.wrapper-content  aside.profile .widget strong {
+    font-weight: normal;
+    color: #3BB9E3;
+    font-size: 14px;
+
+    display:flex;
+    align-items: center;
+}
+
+div.wrapper-content  aside.profile .widget strong img {
+    margin-right: 5px;
+}
+
+div.wrapper-content  aside.profile .followers ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    flex: 1 0 auto;
+    margin-top: 5px;
+}
+
+div.wrapper-content  aside.profile .followers li {
+    width: 45px;
+    height: 45px;
+    background: #d0d5d9;
+    border-radius: 50%;
+    margin-right: 5px;
+    margin-top: 5px;
+
+    display: flex;
+}
+
+div.wrapper-content  aside.profile .images ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    flex: 1 0 auto;
+    margin-top: 5px;
+}
+
+div.wrapper-content  aside.profile .images li {
+    width: 80px;
+    height: 80px;
+    background: #d0d5d9;
+    border-radius: 8%;
+    margin-right: 5px;
+    margin-top: 5px;
+
+    display: flex;
+}
